# CodeStructureAnalyzer

./: .cursorignore  .gitignore  README.md  analyzer.py  cli.py  code_analyzer.py  llm.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.sh  setup.bat  setup.py  setup.sh  trace_ai.md
.github/workflows/: python-build.yml
csa/: .env.example  __init__.py  analyzer.py  cli.py  code_analyzer.py  config.py  llm.py  reporters.py
csa/reporters/: __init__.py  chromadb.py  markdown.py  plan.md  reporters.py
csa/retrieval/: __init__.py  chromadb_retriever.py
dev_config/python/: .pre-commit-config.yaml  ruff.toml
docs/: improve_analyzer_plan.md
docs/release-notes/: 0.2.1.md
examples/: query_chromadb.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_code_analyzer.py  test_config.py  test_llm.py  test_packaging.py  test_reporters.py
