[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[project]
name = "csa"
version = "0.1.0"
description = "Code Structure Analyzer"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CSA tobitege"}
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
[project.scripts]
csa = "csa.cli:main"

[tool.setuptools]
packages = ["csa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
