[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[project]
name = "csa"
version = "0.2.1"
description = "Code Structure Analyzer"
readme = "README.md"
license = "MIT"
authors = [
    {name = "CSA tobitege"}
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
[project.scripts]
csa = "csa.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["csa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
